tests/ui/infer/generic_override_bug1.ina
// COMPILE_FAIL

extern mod core;
using core::prelude::*;

fn main() {
    let a = match Some![i64](20) {
        Some(v) => v,
        None => {},
    };
}
